# VideoUnderstanding

./: .gitignore  pyproject.toml
conf/: detection_config.yaml  vlm_config.yaml
conf/callbacks/: default.yaml
conf/data/: flickr8k.yaml
conf/model/multimodal/: blip2.yaml  clip.yaml
conf/task/: clip_pretrain.yaml  vla_manipulation.yaml  vlm_captioning.yaml
conf/trainer/: default.yaml
scripts/data_prep/: prepare_coco.py
scripts/data_prep/dataset_download/: download_flicker8k.py
scripts/eval/: eval_vlm.py
scripts/train/: train_unified.py  train_vlm.py
src/data/: clip_dataset.py
src/models/backbones/: futr_backbone.py  text_encoder.py  vision_encoder.py
src/models/base/: base_model.py  base_vlm.py
src/models/heads/: projection_head.py
src/models/wrappers/detection/: detectron2_wrapper.py  detr_wrapper.py  sam2_wrapper.py  yolo_wrapper.py
src/models/wrappers/vlm/: clip_wrapper.py
src/pipelines/: unified_pipeline.py
src/tasks/: base_task.py
src/tasks/losses/: vlm_losses.py
src/tasks/multimodal/: clip_pretrain_task.py
src/tasks/supervised/detection/: detection_task.py
src/utils/: registry.py  video_helpers.py
tools/back_to_basics/karpathy_tutorial/: gpt_from_scratch.ipynb
tools/courses/fastai/: Deep_learning.ipynb
tools/grammars/: all_triplets.txt  hierarchical_surgical_grammar_v3_rarp_jigsaw_cholec_chiral (2).pcfg
tools/preprocessing/: cholect50.py  data_load.ipynb  dataset_mapping.py  dataset_preprocessor.py  grammar_induction.py  prepare_jigsaw.py
tools/validation/: validate_dataset.py
(+7 files in other folders)
